--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,6 +55,10 @@ h4 {
   &--2 {
     font-size: 3rem;
   }
+
+  &--3 {
+    font-size: 2.5rem;
+  }
 }
 
 a {
@@ -89,7 +93,7 @@ ul {
 
       a {
         color: var(--color-dark-blue);
-        transition: all .2s ease-in-out;
+        transition: all 0.2s ease-in-out;
 
         &:hover {
           color: var(--color-cyan);
@@ -137,7 +141,7 @@ ul {
         border-radius: 2px;
         border: 1px solid transparent;
         cursor: pointer;
-        transition: all .2s ease-in-out;
+        transition: all 0.2s ease-in-out;
 
         &:hover {
           background-color: hsl(224, 84%, 45%);
@@ -202,15 +206,15 @@ ul {
   text-decoration: none;
   border-bottom: 1px solid var(--color-cyan);
   color: var(--color-cyan);
-  margin: 3rem 0;
-  transition: all .1s ease-in-out;
+  margin: 5rem 0;
+  transition: all 0.1s ease-in-out;
 
   span {
     margin-right: 1rem;
   }
 
   img {
-    width: 2rem;
+    width: 3rem;
   }
 
   &:hover {
@@ -248,11 +252,66 @@ ul {
       border-radius: 50%;
       margin-right: 1rem;
     }
-
-    &-info {}
   }
 }
 
 .text-muted {
   color: var(--color-gray);
+}
+
+.access {
+  grid-row: 5 / 6;
+  grid-column: 1 / -1;
+  color: var(--color-white);
+  background-color: var(--color-gray-blue);
+  padding: 5rem 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr repeat(8, minmax(min-content, 15rem)) 1fr 1fr;
+
+  .grid {
+    grid-column: 3 / 11;
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__content {
+    width: 40%;
+  }
+
+  &__form {
+    width: 40%;
+    margin-left: auto;
+
+    input {
+      border: 1px solid transparent;
+      border-radius: 2px;
+    }
+
+    &-email {
+      padding: 1rem 2rem;
+      display: block;
+      width: 80%;
+      margin: 1.5rem 0;
+
+      &:focus {
+        border-color: var(--color-cyan);
+      }
+    }
+
+    &-btn {
+      display: block;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 700;
+      cursor: pointer;
+      padding: 1rem 2rem;
+      color: #fff;
+      background: var(--color-bright-blue);
+      border-color: transparent;
+
+      &:hover {
+        background-color: hsl(224, 84%, 45%);
+      }
+    }
+  }
 }
