Finished footer section for desktop.

--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,7 @@ ul {
 .access__form-email {
   padding: 1rem 2rem;
   display: block;
-  width: 80%;
+  width: 100%;
   margin: 1.5rem 0;
 }
 
@@ -388,5 +388,135 @@ ul {
 
 .access__form-btn:hover {
   background-color: #1246d3;
+}
+
+.footer {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 1;
+  grid-row: 6 / 7;
+  grid-column: 1 / -1;
+  color: var(--color-white);
+  background-color: var(--color-dark-blue);
+  padding: 5rem 0;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr (minmax(min-content, 15rem))[8] 1fr 1fr;
+      grid-template-columns: 1fr 1fr repeat(8, minmax(-webkit-min-content, 15rem)) 1fr 1fr;
+      grid-template-columns: 1fr 1fr repeat(8, minmax(min-content, 15rem)) 1fr 1fr;
+}
+
+.footer a {
+  color: var(--color-white);
+}
+
+.footer .grid {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 8;
+  grid-column: 3 / 11;
+  padding: 2rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (max-content)[2];
+      grid-template-rows: repeat(2, -webkit-max-content);
+      grid-template-rows: repeat(2, max-content);
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+.footer__logo {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  grid-column: 1 / -1;
+}
+
+.footer__logo img {
+  max-width: 100%;
+  -webkit-filter: brightness(0) invert(1);
+          filter: brightness(0) invert(1);
+}
+
+.footer__contact {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
+.footer__contact-phone, .footer__contact-email {
+  margin-bottom: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__contact-phone img, .footer__contact-email img {
+  margin-right: 2rem;
+}
+
+.footer__nav {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 2rem;
+}
+
+.footer__nav ul {
+  margin: 0 auto;
+}
+
+.footer__nav ul li {
+  margin-bottom: 1rem;
+}
+
+.footer__nav ul li a:hover {
+  text-decoration: underline;
+  color: var(--color-cyan);
+}
+
+.footer__social-media {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4 / 5;
+  margin: 0 auto;
+}
+
+.footer__social-media a {
+  text-align: center;
+  display: inline-block;
+  padding: 0.5rem;
+  width: 3.5rem;
+  height: auto;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  margin: 0 1rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.footer__social-media a:hover {
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
+  color: var(--color-cyan);
+  border-color: var(--color-cyan);
 }
 /*# sourceMappingURL=style.css.map */
