--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,415 +1,4 @@
-:root {
-  --color-dark-blue: hsl(243, 87%, 12%);
-  --color-gray-blue: hsl(238, 22%, 44%);
-  --color-bright-blue: hsl(224, 93%, 58%);
-  --color-cyan: hsl(170, 45%, 43%);
-  --color-white: hsl(240, 75%, 98%);
-  --color-gray: hsl(0, 0%, 75%);
-}
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.6rem;
-  font-weight: 400;
-  line-height: 1.4;
-  box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-family: 'Raleway', sans-serif;
-}
-
-.container {
-  display: grid;
-  grid-template-rows: min-content calc(80vh - 7.5rem) repeat(4, min-content);
-  grid-template-columns: 1fr 1fr repeat(8, minmax(min-content, 15rem)) 1fr 1fr;
-}
-
-.text-small {
-  font-size: 1.2rem;
-}
-
-.heading {
-  margin-bottom: 2rem;
-  font-family: 'Raleway', sans-serif;
-
-  &--1 {
-    font-size: 4rem;
-  }
-
-  &--2 {
-    font-size: 3rem;
-  }
-
-  &--3 {
-    font-size: 2.5rem;
-  }
-}
-
-a {
-  text-decoration: none;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.nav {
-  grid-column: 3 / 11;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem;
-
-  .logo {
-    width: 10rem;
-
-    img {
-      max-width: 100%;
-    }
-  }
-
-  &__list {
-    display: flex;
-    align-items: center;
-
-    &-item {
-      margin: 0 2rem;
-
-      a {
-        color: var(--color-dark-blue);
-        transition: all 0.2s ease-in-out;
-
-        &:hover {
-          color: var(--color-cyan);
-        }
-      }
-    }
-  }
-}
-
-.intro {
-  grid-column: 3 / 11;
-  grid-row: 2 / 3;
-  padding: 2rem;
-  display: flex;
-  align-items: center;
-
-  &__content {
-    width: 50%;
-
-    p {
-      margin: 2rem 0;
-    }
-
-    &-form {
-      display: flex;
-      align-items: center;
-
-      &--email {
-        padding: 1rem;
-        padding-right: 10rem;
-        margin-right: 2rem;
-        border: 1px solid #ccc;
-        outline: none;
-
-        &:focus {
-          border-color: var(--color-cyan);
-        }
-      }
-
-      &--btn {
-        padding: 1rem 4rem;
-        background-color: var(--color-bright-blue);
-        color: #fff;
-        font-weight: 700;
-        border-radius: 2px;
-        border: 1px solid transparent;
-        cursor: pointer;
-        transition: all 0.2s ease-in-out;
-
-        &:hover {
-          background-color: hsl(224, 84%, 45%);
-        }
-      }
-    }
-  }
-
-  &__img {
-    width: 50%;
-
-    img {
-      max-width: 100%;
-    }
-  }
-}
-
-.curvy {
-  grid-row: 3 / 4;
-  grid-column: 1 / -1;
-  margin-top: 2rem;
-
-  img {
-    width: 100%;
-  }
-}
-
-.productive {
-  grid-row: 4 / 5;
-  grid-column: 1 / -1;
-  background-color: #f8f8fe;
-  margin-top: -1rem;
-  padding: 5rem 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr repeat(8, minmax(min-content, 15rem)) 1fr 1fr;
-
-  .grid {
-    grid-column: 3 / 11;
-    padding: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  &__content {
-    width: 50%;
-  }
-
-  &__img {
-    width: 45%;
-
-    img {
-      max-width: 100%;
-    }
-  }
-}
-
-.cta {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  border-bottom: 1px solid var(--color-cyan);
-  color: var(--color-cyan);
-  margin: 5rem 0;
-  transition: all 0.1s ease-in-out;
-
-  span {
-    margin-right: 1rem;
-  }
-
-  img {
-    width: 3rem;
-  }
-
-  &:hover {
-    transform: translateY(-2px);
-  }
-}
-
-.testimonial-card {
-  font-size: 1.4rem;
-  background-color: #fff;
-  padding: 2.5rem;
-  width: 35rem;
-  border-radius: 5px;
-  box-shadow: 1px 1px 3px 2px rgb(238, 238, 238);
-
-  &__text {
-    line-height: 1.6;
-  }
-
-  img {
-    max-width: 100%;
-  }
-
-  &__text {
-    margin-bottom: 1rem;
-  }
-
-  &__user {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-
-    img {
-      width: 5rem;
-      border-radius: 50%;
-      margin-right: 1rem;
-    }
-  }
-}
-
-.text-muted {
-  color: var(--color-gray);
-}
-
-.access {
-  grid-row: 5 / 6;
-  grid-column: 1 / -1;
-  color: var(--color-white);
-  background-color: var(--color-gray-blue);
-  padding: 5rem 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr repeat(8, minmax(min-content, 15rem)) 1fr 1fr;
-
-  .grid {
-    grid-column: 3 / 11;
-    padding: 2rem;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__content {
-    width: 40%;
-  }
-
-  &__form {
-    width: 40%;
-    margin-left: auto;
-
-    input {
-      border: 1px solid transparent;
-      border-radius: 2px;
-    }
-
-    &-email {
-      padding: 1rem 2rem;
-      display: block;
-      width: 100%;
-      margin: 1.5rem 0;
-
-      &:focus {
-        border-color: var(--color-cyan);
-      }
-    }
-
-    &-btn {
-      display: block;
-      font-family: 'Raleway', sans-serif;
-      font-weight: 700;
-      cursor: pointer;
-      padding: 1rem 2rem;
-      color: #fff;
-      background: var(--color-bright-blue);
-      border-color: transparent;
-
-      &:hover {
-        background-color: hsl(224, 84%, 45%);
-      }
-    }
-  }
-}
-
-.footer {
-  grid-row: 6 / 7;
-  grid-column: 1 / -1;
-  color: var(--color-white);
-  background-color: var(--color-dark-blue);
-  padding: 5rem 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr repeat(8, minmax(min-content, 15rem)) 1fr 1fr;
-
-  a {
-    color: var(--color-white);
-  }
-  .grid {
-    grid-column: 3 / 11;
-    padding: 2rem;
-    display: grid;
-    grid-template-rows: repeat(2, max-content);
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
-  }
-
-  &__logo {
-    grid-row: 1 / 2;
-    grid-column: 1 / -1;
-    img {
-      max-width: 100%;
-      filter: brightness(0) invert(1);
-    }
-  }
-
-  &__contact {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-
-    &-phone,
-    &-email {
-      margin-bottom: 1rem;
-      display: flex;
-      align-items: center;
-
-      img {
-        margin-right: 2rem;
-      }
-    }
-
-    // &-email {
-    // }
-  }
-
-  &__nav {
-    grid-row: 2 / 3;
-    grid-column: 2 / 4;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    gap: 2rem;
-
-    ul {
-      margin: 0 auto;
-
-      li {
-        margin-bottom: 1rem;
-
-        a {
-          &:hover {
-            text-decoration: underline;
-            color: var(--color-cyan);
-          }
-        }
-      }
-    }
-  }
-
-  &__social-media {
-    grid-row: 2 / 3;
-    grid-column: 4 / 5;
-    margin: 0 auto;
-
-    a {
-      text-align: center;
-      display: inline-block;
-      padding: 0.5rem;
-      width: 3.5rem;
-      height: auto;
-      border: 1px solid #fff;
-      border-radius: 50%;
-      margin: 0 1rem;
-      transition: all 0.2s ease-in-out;
-
-      &:hover {
-        transform: translateY(-2px);
-        color: var(--color-cyan);
-        border-color: var(--color-cyan);
-      }
-    }
-  }
-}
+@import "base";
+@import "components";
+@import "layout";
+@import "typography";
