--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,6 +5,9 @@
   --color-cyan: hsl(170, 45%, 43%);
   --color-white: hsl(240, 75%, 98%);
   --color-gray: hsl(0, 0%, 75%);
+
+  --bp-tablet: 768px;
+  --bp-mobile: 600px;
 }
 
 *,
@@ -22,7 +25,7 @@ html {
     font-size: 56.25%;
   }
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and(max-width: 600px) {
     font-size: 50%;
   }
 }
