--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -39,17 +39,40 @@
   display: flex;
   align-items: center;
 
+  @media only screen and (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+  }
+
   &__content {
     width: 50%;
     z-index: 20;
 
+    @media only screen and (max-width: 768px) {
+      width: 100%;
+      order: 2;
+      text-align: center;
+    }
+
     p {
       margin: 2rem 0;
+
+      @media only screen and (max-width: 768px) {
+        margin: 3rem auto;
+        width: 80%;
+        text-align: center;
+      }
     }
 
     &-form {
       display: flex;
       align-items: center;
+
+      @media only screen and (max-width: 768px) {
+        justify-content: center;
+        flex-direction: column;
+        width: 100%;
+      }
 
       &--email {
         padding: 1rem;
@@ -57,6 +80,12 @@
         margin-right: 2rem;
         border: 1px solid #ccc;
         outline: none;
+
+        @media only screen and (max-width: 768px) {
+          width: 75%;
+          margin-right: 0;
+          margin-bottom: 2rem;
+        }
 
         &:focus {
           border-color: var(--color-cyan);
@@ -73,6 +102,10 @@
         cursor: pointer;
         transition: all 0.2s ease-in-out;
 
+        @media only screen and (max-width: 768px) {
+          width: 75%;
+        }
+
         &:hover {
           background-color: hsl(224, 84%, 45%);
         }
@@ -82,6 +115,11 @@
 
   &__img {
     width: 50%;
+
+    @media only screen and (max-width: 768px) {
+      width: 75%;
+      margin-bottom: 5rem;
+    }
 
     img {
       max-width: 100%;
@@ -114,14 +152,48 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media only screen and (max-width: 768px) {
+      flex-direction: column;
+      justify-content: center;
+    }
   }
 
   &__content {
     width: 50%;
+
+    @media only screen and (max-width: 768px) {
+      width: 100%;
+      order: 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &-text {
+      @media only screen and (max-width: 768px) {
+        width: 80%;
+        margin: 1rem auto;
+      }
+    }
+
+    h2 {
+      @media only screen and (max-width: 768px) {
+        text-align: center;
+        margin-bottom: 3rem;
+      }
+    }
+
   }
 
   &__img {
     width: 45%;
+
+    @media only screen and (max-width: 768px) {
+      width: 70%;
+      margin-bottom: 3rem;
+    }
 
     img {
       max-width: 100%;
@@ -139,6 +211,7 @@
 
   &__text {
     line-height: 1.6;
+    flex: 2;
   }
 
   img {
@@ -165,6 +238,10 @@
         font-family: 'Raleway', sans-serif;
         font-size: 2rem;
       }
+
+      p {
+        margin: 0;
+      }
     }
   }
 }
@@ -183,15 +260,31 @@
     padding: 2rem;
     display: flex;
     justify-content: space-between;
+
+    @media only screen and (max-width: 768px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   &__content {
     width: 40%;
+
+    @media only screen and (max-width: 768px) {
+      width: 80%;
+      text-align: center;
+    }
   }
 
   &__form {
     width: 40%;
     margin-left: auto;
+
+    @media only screen and (max-width: 768px) {
+      width: 80%;
+      margin: 1rem 0;
+    }
 
     input {
       border: 1px solid transparent;
@@ -248,11 +341,23 @@
     grid-template-rows: repeat(2, max-content);
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+
+    @media only screen and (max-width: 768px) {
+      grid-template-columns: repeat(3, 1fr);
+      margin: 0 2rem;
+    }
+
   }
 
   &__logo {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
+    width: 10rem;
+
+    @media only screen and (max-width: 768px) {
+      justify-self: center;
+    }
+
 
     img {
       max-width: 100%;
@@ -262,11 +367,24 @@
 
   &__contact {
     grid-row: 2 / 3;
-    grid-column: 1 / 2;
+    grid-column: 1 / 4;
+
+    @media only screen and (max-width: 768px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      grid-row: 2 / 3;
+      grid-column: 1 / 4;
+    }
 
     &-phone,
     &-email {
       margin-bottom: 1rem;
+
+      @media only screen and (max-width: 768px) {
+        margin: 1rem 2rem;
+      }
+
       display: flex;
       align-items: center;
 
@@ -286,6 +404,11 @@
     grid-template-columns: 1fr 1fr;
     justify-content: center;
     gap: 2rem;
+
+    @media only screen and (max-width: 768px) {
+      grid-row: 3 / 4;
+      grid-column: 2 / 3;
+    }
 
     ul {
       margin: 0 auto;
@@ -307,6 +430,12 @@
     grid-row: 2 / 3;
     grid-column: 4 / 5;
     margin: 0 auto;
+
+    @media only screen and (max-width: 768px) {
+      grid-row: 4 / 5;
+      grid-column: 1 / -1;
+      justify-self: center;
+    }
 
     a {
       text-align: center;
