--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -28,6 +28,10 @@ html {
   @media only screen and(max-width: 600px) {
     font-size: 50%;
   }
+
+  @media only screen and (max-height: 450px) {
+    font-size: 37.25%;
+  }
 }
 
 body {
